# FELIX-BOT-V2

./: .gitignore  README.md  cursorules.md  gist2repo.sh  gist2repo_portable.sh  pyproject.toml  this_script.sh
_gist_work/: chat-gpt-chatbot-clean.zip.b64  gist.json
_wrap/: base64
app/: main.py  run_live.py
core/: classifier.py  config.py  delays.py  folder_manager.py  llm.py  logging.py  persistence.py  router.py  sim.py  templates.py
data/accounts/acc1/: rules.yaml  templates.yaml
docs/: scenario_schema.yaml
telegram/: actions.py  client_manager.py  handlers.py
tests/: test_classifier.py  test_classifier_template_chooser.py  test_delays.py  test_folder_manager.py  test_folders_exclusive.py  test_router.py  test_router_llm_rules.py  test_sim.py
ui/: accounts.py  desktop.py  testlab.py
